<resources>
    <string name="app_name">SendMail</string>
    <string name="to">To:</string>
    <string name="cc">Cc:</string>
    <string name="bcc">Bcc:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="cleanform">CleanForm</string>
    <string name="send_email">Send email</string>
    <string name="clean_form">Clean form</string>
</resources>